Actualizado meses en plan de trabajo

--- a/diapositivas_propuesta/propuesta_presentación.tex
+++ b/diapositivas_propuesta/propuesta_presentación.tex
@@ -394,12 +394,12 @@ Se propone combinar los distintos métodos para obtener un método que considere
 \begin{frame}
 \frametitle{Plan de Trabajo}
 \begin{itemize}
-	\item Revisión bibliográfica de métodos de evaluación de coherencia textual, basados en teoría de discurso.
-	\item Diseño de un método automático para evaluar ensayos.
+	\item Revisión bibliográfica de métodos de evaluación de coherencia textual, basados en teoría de discurso - Mes 1
+	\item Diseño de un método automático para evaluar ensayos - Meses 2 - 3
 	\item Implementación de métodos en el estado del arte, para posteriormente comparar con lo propuesto.
-	\item Ensamble de modelos que consideren sintaxis y semántica.
-	\item Crear prototipo para realizar pruebas.
-	\item Evaluar rendimiento del modelo y comparar con modelos del estado del arte.
+	\item Ensamble de modelos que consideren sintaxis y semántica - Mes 2
+	\item Crear prototipo para realizar pruebas - Mes 3
+	\item Evaluar rendimiento del modelo y comparar con modelos del estado del arte - Mes 4
 \end{itemize}
 \end{frame}
 
